fixed the errors in the html -iframe

--- a/yt.html
+++ b/yt.html
@@ -20,62 +20,40 @@
                 <i id="ytbell1" class="far fa-bell fa-4x"></i>
                 <div id="circle8">8</div>
               </div>
-
-              <div class="item">
+                <div class="item">
                 <input id="search_bar" type="text" name="search_bar" value="" placeholder="Search" />
               </div>
-
-              <div class="headerpair2">
+             <div class="headerpair2">
                 <div class="ssguy"></div>
                 <i id="settings" class="fas fa-cog fa-4x"></i>
               </div>
-
-              <div class="upload">
+               <div class="upload">
                 Upload
               </div>
             </header>
-
               <div class="eggsaisle">
                 <iframe
                         width="3070px"
                         height="2010px"
                         src="https://www.youtube.com/embed/Nd4BkhorZbc"
-                        frameborder="0"
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen>
                 </iframe>
               </div>
-
-
-
-
-                  <div>
-                    <h3>Mac Miller - Eggs Aisle</h3>
-                    <h3>(Official Audio)<h3>
-                  </div>
-
-
-                  <div id="bodyinner1">
+                    <h3>Mac Miller - Eggs Aisle
+                        (Official Audio)</h3>
+                       <div id="bodyinner1">
                       <div class="ssguy2"></div>
                         <h2>Wiz Khalifa</h2>
-
-
-
-                      <button id="ytbutton"><div><i id="yticon" class="fab fa-youtube"></i>Subscribe</div></button>
-
-
-
-
-                        <div id="sub6">
+                         <button id="ytbutton"><i id="yticon" class="fab fa-youtube"></i>Subscribe</button>
+                       <div id="sub6">
                           <h4>18,208,884 SUBSCRIBERS</h4>
                         </div>
                         <div id="vid7">
                           <h4>8,862,293,961 VIEWS</h4>
                         </div>
                     </div>
-                  </div>
-
-                  <div id="bodyinner2">
+                   <div id="bodyinner2">
                     <div id="about">
                       <h6>ABOUT</h6>
                     </div>
@@ -94,22 +72,18 @@
                   </div>
                     <hr id="line1">
                     <hr id="line2">
-
-                  <div class="loreminner">
+                    <div class="loreminner">
                     <p>Contrary to popular belief, Lorem Ipsum is not simply random text.
                     It has roots in a piece of classical Latin literature from 45 BC, making
                     it over 2000 years old. Richard McClintock, a
                     Latin professor at Hampden-Sydney...&nbsp;&nbsp;&nbsp;&nbsp; <span id="showmore">SHOW MORE</span></p>
                     <div id="published"><p>Published on April 10 2014</p></div>
                   </div>
-
                   <div class="commentstitle">Comments &nbsp;<span id="comments147">147</span></div>
-
-                    <div id="profile1comments">
+                     <div id="profile1comments">
                       <div id="commentpic1" class="ssguy2"></div>
                       <div class="commentbox1">&nbsp;&nbsp;&nbsp;Share&nbsp;your&nbsp;thoughts</div>
                     </div>
-
                      <div class="comment-flex">
                       <div>
                         <div id="xxx" class="avatars">
@@ -117,34 +91,23 @@
                           <div id="xyd">Yesterday</div>
                         </div>
                         <div id="xcomment">You are the GOAT!!</div>
-  
                           <div id="sixnine" class="avatars">
                             <div id="name69">
                               <span id="t">T</span><span id="e">e</span><span id="k">k</span><span id="a">a</span><span id="s">s</span><span id="h">h</span><span id="i">i</span>&nbsp;69,</div>
                             <div id="date69">1&nbsp;day&nbsp;ago</div>
                           </div>
                           <div id="comment69">I've been through some amazing situations while experiencing your art we call "music"</div>
-  
-                          <div id="rtk" class="avatars">
+                            <div id="rtk" class="avatars">
                             <div id="rtkname">Rich&nbsp;The&nbsp;Kidd,</div>
                             <div id="rtkdate">about&nbsp;a&nbsp;week&nbsp;ago</div>
                           </div>
                           <div id="rtkcomment">R.I.P. To The Father of Rap</div>
-  
-                          <div id="mby" class="avatars">
+                               <div id="mby" class="avatars">
                             <div id="mbyname">MoneyBagg,</div>
                             <div id="mbydate">Yesterday</div>
                           </div>
-                          <div id="mbycomment">Big Faxxx¡¡¡¡¡</div>
                           <div id="mbycomment">Yo... we gatta link bruhh <button><span id="rich">@Rich_The_Kidd</span></button> ASAP</div>
-  
-                          <div id="xxx" class="avatars">
-                            <div id="xname">XXXTentacion,</div>
-                            <div id="xyd">Yesterday</div>
-                          </div>
-                          <div id="xcomment">Dope ashhhh Bro!!!!</div>
-  
-                          <div id="djt" class="avatars">
+                            <div id="djt" class="avatars">
                             <div id="djtname"><span id="D">Donald</span>&nbsp;<span id="J">J.</span>&nbsp;<span id="T">Trump,</span></div>
                             <div id="djtdate">3&nbsp;Months&nbsp;Ago</div>
                             <div id="djtreply"><span class="dtreply">5</span></div>
@@ -154,8 +117,7 @@
                           <div id="djtcomment">Being nice to Rocket Man hasn't worked <br>
                             in 25 years, why would it work now? Clinton failed, Bush <br>
                             failed, and Obama failed. I won't fail.</div>
-  
-                          <div id="kwest" class="avatars">
+                                <div id="kwest" class="avatars">
                             <div id="kwname">Kanye&nbsp;West,</div>
                             <div id="kwdate">Live&nbsp;Now</div>
                             <div id="livefont"><i class="fas fa-dot-circle"></i></div>
@@ -165,17 +127,6 @@
                       <div class="bordered">
                         <img src="ssvid.png" alt="">
                       </div>
-                      
-                     </div>
-
-
-
-
-
-
-
-
-
-
-          </body>
+                    </div>
+      </body>
      </html>
